@@ -5,7 +5,11 @@ View a part of your tree in the backend.
 
 Without settings: Show main index of your site
 
-Extension settings: Set page ID or URL for all users
+Extension settings: 
+
+* Set page ID or URL for all users
+
+* _New:_ Set module group to be added to
 
 
 * `github`_ Project page
